予測結果取得時にモデルNoを指定するよう修正
